[package]
name = "hellofetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bytesize = "1.3.0"
compound_duration = "1.2.1"
resolution = "0.2.0"
#fs2 = "0.4.3"
sysinfo = "0.30.12"
whoami = "1.5.1"
